# syndwarsfx-gfx

./: LICENSE.md  Makefile.am  README.md  anims-cyborg.am  anims-wep-mod.am  campaign.am  configure.ac  gfx_config.h.in  gfxprivconfig.h.in  sprites-eng-icons0-1.am  sprites-eng-icons0-2.am  sprites-eng-icons0-3.am  sprites-font0-0.am  sprites-font0-1.am  sprites-font0-2.am  sprites-font0-3.am  sprites-font0-4.am  sprites-font0-5.am  sprites-fontc0-0.am  sprites-fontc0-1.am  sprites-fontc0-3.am  sprites-fontc0-7.am  sprites-fontc1-0.am  sprites-fontc1-2.am  sprites-fontc2-0.am  sprites-fontc2-1.am  sprites-fontc2-3.am  sprites-fontc2-7.am  sprites-fre-icons0-1.am  sprites-fre-icons0-2.am  sprites-fre-icons0-3.am  sprites-ger-icons0-1.am  sprites-ger-icons0-2.am  sprites-ger-icons0-3.am  sprites-icons0-1.am  sprites-ita-icons0-1.am  sprites-ita-icons0-2.am  sprites-ita-icons0-3.am  sprites-panel0-0.am  sprites-panel0-1.am  (+22 more)
.github/workflows/: build.yaml
cybmods-render-64/: filelist-mod-01.txt  filelist-mod-05.txt  filelist-mod-07.txt  filelist-mod-08.txt  filelist-mod-10.txt  filelist-wep-00.txt  filelist-wep-02.txt  filelist-wep-03.txt  filelist-wep-04.txt  filelist-wep-06.txt  filelist-wep-09.txt  filelist-wep-11.txt
cyborg-arms-i-render-64/: filelist-m1a1i.txt  filelist-m2a2i.txt  filelist-m2a3i.txt  filelist-m3a2i.txt
cyborg-arms-o-render-64/: filelist-m1a1o.txt  filelist-m1a2o.txt  filelist-m2a1o.txt  filelist-m2a2o.txt  filelist-m2a3o.txt  filelist-m3a1o.txt  filelist-m3a2o.txt  filelist-m3a3o.txt
cyborg-arms-render-64/: filelist-m1a1i.txt  filelist-m1a2i.txt  filelist-m2a1i.txt  filelist-m2a2i.txt  filelist-m2a3i.txt  filelist-m3a1i.txt  filelist-m3a2i.txt  filelist-m3a3i.txt
cyborg-breath-render-64/: filelist-m1a1.txt  filelist-m1a2.txt  filelist-m2a1.txt  filelist-m2a2.txt  filelist-m2a3.txt  filelist-m3a1.txt  filelist-m3a2.txt  filelist-m3a3.txt
cyborg-brin-i-render-64/: filelist-m1bbi.txt  filelist-m2bbi.txt  filelist-m3bbi.txt
cyborg-brin-o-render-64/: filelist-m1bbo.txt  filelist-m2bbo.txt  filelist-m3bbo.txt
cyborg-chst-i-render-64/: filelist-m1bi.txt  filelist-m2bi.txt  filelist-m3bi.txt
cyborg-chst-o-render-64/: filelist-m1bo.txt  filelist-m2bo.txt  filelist-m3bo.txt
cyborg-legs-i-render-64/: filelist-m2l2i.txt  filelist-m3l1i.txt  filelist-m3l2i.txt  filelist-m3l3i.txt
cyborg-legs-o-render-64/: filelist-m1l1o.txt  filelist-m1l2o.txt  filelist-m2l1o.txt  filelist-m2l2o.txt  filelist-m2l3o.txt  filelist-m3l1o.txt  filelist-m3l2o.txt  filelist-m3l3o.txt
cyborg-legs-render-64/: filelist-m1l1i.txt  filelist-m1l2i.txt  filelist-m2l1i.txt  filelist-m2l3i.txt
data/: engine-std.pal  feproj-std.pal  mele-0.ani  nfra-0.ani  nsta-0.ani
feicons-128/: filelist-icons0-3.txt
feicons-64/: filelist-icons0-1.txt
feicons-96/: filelist-icons0-2.txt
femouse-128/: filelist-mouse0-3.txt
femouse-192/: filelist-mouse0-5.txt
femouse-256/: filelist-mouse0-7.txt
femouse-32/: filelist-mouse0-0.txt
femouse-64/: filelist-mouse0-1.txt
femouse-96/: filelist-mouse0-2.txt
font0_sharp_cult-20-white/: filelist-font0-2b.txt
font0_sharp_cult-23-white/: filelist-font0-2.txt
font0_sharp_cult-5-white/: filelist-font0-0.txt
font0_sharp_cult-7-white/: filelist-font0-3.txt
font_sharp_cult-10-white/: filelist-font0-1.txt  filelist-fontc0-1.txt
font_sharp_cult-20-white/: filelist-fontc0-3.txt
font_sharp_cult-23-white/: filelist-font0-2.txt  filelist-fontc1-2.txt
font_sharp_cult-40-white/: filelist-fontc0-7.txt
font_sharp_cult-5-white/: filelist-fontc0-0.txt
font_sharp_cult-7-white/: filelist-fontc1-0.txt
panel_dgren_marbl-128/: filelist-panel2-3.txt  filelist-pop2-1.txt  filelist-pop2-3.txt
panel_dgren_marbl-32/: filelist-panel2-0.txt  filelist-pop2-0.txt
panel_dgren_marbl-64/: filelist-panel2-1.txt  filelist-pop2-1.txt
panel_lblue_plain-128/: filelist-panel0-3.txt  filelist-pop0-3.txt
panel_lblue_plain-32/: filelist-panel0-0.txt  filelist-pop0-0.txt
panel_lblue_plain-64/: filelist-panel0-1.txt  filelist-pop0-1.txt
panel_mblue_bevel-128/: filelist-panel1-3.txt  filelist-pop1-1.txt  filelist-pop1-3.txt
panel_mblue_bevel-32/: filelist-panel1-0.txt  filelist-pop1-0.txt
panel_mblue_bevel-64/: filelist-panel1-1.txt  filelist-pop1-1.txt
pointers-128/: filelist-pointr0-2.txt  filelist-pointr0-3.txt
pointers-32/: filelist-pointr0-0.txt
pointers-64/: filelist-pointr0-1.txt
pointers-96/: filelist-pointr0-2.txt
weapons-render-64/: filelist-wep-00.txt  filelist-wep-01.txt  filelist-wep-02.txt  filelist-wep-03.txt  filelist-wep-04.txt  filelist-wep-05.txt  filelist-wep-06.txt  filelist-wep-07.txt  filelist-wep-08.txt  filelist-wep-09.txt  filelist-wep-10.txt  filelist-wep-11.txt  filelist-wep-12.txt  filelist-wep-13.txt  filelist-wep-15.txt  filelist-wep-16.txt  filelist-wep-17.txt  filelist-wep-19.txt  filelist-wep-20.txt  filelist-wep-21.txt  filelist-wep-23.txt  filelist-wep-24.txt  filelist-wep-25.txt  filelist-wep-26.txt  filelist-wep-27.txt  filelist-wep-28.txt  filelist-wep-29.txt  filelist-wep-30.txt
